crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__complex_newline_preservation-2.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: content1
snapshot_kind: text
---
// Header comment


function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}

// Footer comment
