crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__complex_newline_preservation-5.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: normalize_path(&result)
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.txt">



// New header



function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}



// Updated footer
</file_content>
