crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__complex_newline_preservation-6.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: content3
snapshot_kind: text
---
// New header



function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}



// Updated footer
