crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__empty_search_new_file.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: normalize_path(&result)
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.txt">
New content
</file_content>
