crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__error_messages-2.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: io_err.to_string()
snapshot_kind: text
---
File operation failed: No such file or directory (os error 2)
