crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply__test__error_messages.snap
---
source: crates/forge_tool/src/patch/apply.rs
expression: err.to_string()
snapshot_kind: text
---
File not found at path: nonexistent.txt
